// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifExpertApp /> test must show <GifExpertApp /> correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`<GifExpertApp /> test should show categories lists 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Costa Rica"
      key="Costa Rica"
    />
    <GifGrid
      category="Apple"
      key="Apple"
    />
  </ol>
</Fragment>
`;
